--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "hubot-google-images": "^0.2.1",
     "hubot-google-translate": "^0.2.0",
     "hubot-help": "^0.1.1",
+    "hubot-heroku-keepalive": "^1.0.0",
     "hubot-maps": "0.0.2",
     "hubot-plusplus": "^1.1.5",
     "hubot-pugme": "^0.1.0",
