--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "hubot-rules": "^0.1.1",
     "hubot-scripts": "^2.16.2",
     "hubot-shipit": "^0.2.0",
-    "hubot-slack": "^3.3.0"
+    "hubot-slack": "^3.3.0",
+    "node-schedule": "^0.2.9",
+    "underscore": "^1.8.3"
   },
   "engines": {
     "node": "0.10.x"
