temp fix for plusplus until PR is merged

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Sam Couch <sam@couch.rocks>",
   "description": "Owl doing owl things.",
   "dependencies": {
+    "clark": "0.0.6",
     "hubot": "^2.16.0",
     "hubot-diagnostics": "0.0.1",
     "hubot-google-images": "^0.2.1",
@@ -12,7 +13,6 @@
     "hubot-help": "^0.1.1",
     "hubot-heroku-keepalive": "^1.0.0",
     "hubot-maps": "0.0.2",
-    "hubot-plusplus": "^1.1.5",
     "hubot-pugme": "^0.1.0",
     "hubot-redis-brain": "0.0.3",
     "hubot-rules": "^0.1.1",
@@ -20,6 +20,7 @@
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^3.3.0",
     "node-schedule": "^0.2.9",
+    "querystring": "^0.2.0",
     "underscore": "^1.8.3"
   },
   "engines": {
