--- a/package.json
+++ b/package.json
@@ -7,18 +7,16 @@
   "dependencies": {
     "clark": "0.0.6",
     "google-spreadsheet": "^1.0.1",
-    "hubot": "^2.16.0",
+    "hubot": "^2.17.0",
     "hubot-help": "^0.1.1",
     "hubot-heroku-keepalive": "^1.0.0",
     "hubot-pugme": "^0.1.0",
     "hubot-redis-brain": "0.0.3",
     "hubot-scripts": "^2.16.2",
-    "hubot-slack": "^3.3.0",
+    "hubot-slack": "^3.4.x",
     "moment": "^2.10.6",
     "node-schedule": "^0.2.9",
-    "querystring": "^0.2.0",
-    "shortid": "^2.2.4",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3"`
   },
   "engines": {
     "node": "0.10.x"
