--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "hubot-slack": "^3.4.x",
     "moment": "^2.10.6",
     "node-schedule": "^0.2.9",
-    "underscore": "^1.8.3"`
+    "underscore": "^1.8.3"
   },
   "engines": {
     "node": "0.10.x"
